# alert-analysis-companion

./: .pre-commit-config.yaml  docker-compose.yml
backend/: .env.example  .gitignore  docker-compose.yml  pyproject.toml
backend/src/: main.py
